--- a/FinalProject_group05(draft).ipynb
+++ b/FinalProject_group05(draft).ipynb
@@ -534,17 +534,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Update__\n",
+    "The question is well-posed and narrow enough in scope to be answerable due to information that we obtained from datasets that includes San Diego Food Bank, San Diego GIS data, and population estimates by zip code which pose no concern for privacy due to their transparency to the public. We might inadvertently track some correlates such as race and gender relations in the United States, as a result of our examination of each dataset. Relevant stakeholders are the people of the greater San Diego area, food bank distributors, suppliers, as well as the local, state, and federal government. The data in which we have gives us information on median income by zip, ethnicities by zip, and food distribution by zip that can all display the areas and zip codes that rely on food bank distribution the most. \n",
     "\n",
-    "The question is well-posed and narrow enough in scope to be answerable due to information that we obtained from datasets that includes San Diego Food Bank, San Diego GIS data, and population estimates by zip code which pose no concern for privacy due to their transparency to the public. We might inadvertently track some correlates such as race and gender relations in the United States, as a result of our examination of each dataset. \n",
-    "\n",
-    "Relevant stakeholders are the people of the greater San Diego area, food bank distributors, suppliers, as well as the local, state, and federal government. The data in which we have gives us information on median income by zip, ethnicities by zip, and food distribution by zip that can all display the areas and zip codes that rely on food bank distribution the most. \n",
-    "\n",
-    "In terms of biases, it is possible that underserved communities and individuals might have their food needs met by organizations and individuals outside the scope of available data, (churches, religious institutions), might not participate in a census, and/or be documented.\n",
-    "\n",
-    "Informed consent cannot be given to our research, but since we expect all the data to be anonymized to begin with, this might not be a factor. With the data being randomized, ethicial implications of research would arise through the limited datasets available which in turn could potentially skew food distribution in areas that require it most. \n",
-    "\n",
-    "Since the data we will rely on is anonymized, we do not expect any privacy issues. If some of the data is not sufficiently anonymized, we will anonymize it. Making use of anonymized data should ensure we do not violate our subjects’ privacy. \n"
+    "In terms of biases, it is possible that underserved communities and individuals might have their food needs met by organizations and individuals outside the scope of available data, (churches, religious institutions), might not participate in a census, and/or be documented. Informed consent cannot be given to our research, but since we expect all the data to be anonymized to begin with, this might not be a factor. With the data being randomized, ethicial implications of research would arise through the limited datasets available which in turn could potentially skew food distribution in areas that require it most. Since the data we will rely on is anonymized, we do not expect any privacy issues. If some of the data is not sufficiently anonymized, we will anonymize it. Making use of anonymized data should ensure we do not violate our subjects’ privacy. \n"
    ]
   },
   {
