--- a/Gadi_Notebook.ipynb
+++ b/Gadi_Notebook.ipynb
@@ -3579,7 +3579,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As expected, the mean ratio of foo"
+    "As expected, the mean ratio of pounds of food distributed per person more than doubled from April 2019 to April 2020, confirming that food distribution has indeed increased more than usual. \n",
+    "The bootstrapping method used above shows that the mean ratios for each month fall within values we would expect them to, also proven by the 95% confidence intervals we calculated for the mean ratios."
    ]
   },
   {
