--- a/Majority Ethnicities by Zip Code - Rujvi.ipynb
+++ b/Majority Ethnicities by Zip Code - Rujvi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
        "4  91901  2010            Other          10"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "68  91901  2018            Other          49"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "Name: POPULATION, Length: 111, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
        " 'White']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
        "[111 rows x 2 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
        "[111 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
        "68  91901  2018            Other          49"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
        "Name: POPULATION, Length: 111, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +757,7 @@
        "       'Pacific Islander', 'Two or More', 'White'], dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +898,7 @@
        "[111 rows x 4 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1078,7 @@
        "[111 rows x 5 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1203,19 +1203,20 @@
        "[110 rows x 2 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "amin = amin.drop(['YEAR', 'ETHNICITY', 'POPULATION'], axis=1)\n",
     "amin"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1224,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1294,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1329,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1350,6 +1351,7 @@
     }
    ],
    "source": [
+    "#Hispanic\n",
     "filepath5 = \"CENSUS-Data/Census_ZIP.shp\"\n",
     "tempmap5 = gpd.read_file(filepath5)\n",
     "\n",
@@ -1363,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1428,7 +1430,7 @@
        "20        10.0    0.006002  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1450,7 +1452,11 @@
     }
    ],
    "source": [
-    "#\n",
+    "#Other ethnicities is the ethnicities that is not mentioned in the ethnicities column. The ZIP code that has the maximum number of 'other'\n",
+    "#ethnicities is the ZIP cide 91962 - Pine Valley. The racial makeup of Pine Valley is 1,408 (93.2%) \n",
+    "#White, 6 (0.4%) African American, 6 (0.4%) Native American, Hispanic or Latino of any race-154 people (10.2%)\n",
+    "#16 (1.1%) Asian, 1 (0.1%) Pacific Islander, 20 (1.3%) from other races, and 53 (3.5%) from two or more races.\n",
+    "#though the White population is prominent The population of other races in this zipcode is maximum compared to that of other zipcodes\n",
     "filepath6 = \"CENSUS-Data/Census_ZIP.shp\"\n",
     "tempmap6 = gpd.read_file(filepath6)\n",
     "\n",
@@ -1466,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1500,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1534,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1565,6 +1571,20 @@
     "sdmap9 = sdmap9.dropna()\n",
     "sdmap9.plot(column='PROPORTION', ax=ax9, cmap='GnBu', legend=True);"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
