--- a/FinalProject_group05(draft).ipynb
+++ b/FinalProject_group05(draft).ipynb
@@ -580,6 +580,20 @@
    "source": [
     "*Specify who in your group worked on which parts of the project.*"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Acknowledgements"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Acknowledgements*"
+   ]
   }
  ],
  "metadata": {
