--- a/FinalProject_group05(draft).ipynb
+++ b/FinalProject_group05(draft).ipynb
@@ -35,7 +35,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Fill in your overview here*"
+    "- With the effects of COVID-19, the reliance on Food bank distribution centers have never been greater. Analysis of food bank distribution data by population estimate shows __growth and correlation__ between the rise of the pandemic and the lbs of food people acquired by zip code. \n",
+    "- Through bootstrapping and generating heatmaps, we find that the ratio of food acquired from food banks has increased from April 2019 to April 2020."
    ]
   },
   {
@@ -148,11 +149,11 @@
    "metadata": {},
    "source": [
     "1. San Diego Foodbank - Lbs of food distributed \n",
-    "*NUMBER OF OBSERVATIONS*\n",
+    "__*NUMBER OF OBSERVATIONS and information*__\n",
     "2. SANDAG/SanGIS regional GIS data\n",
-    "*NUMBER OF OBSERVATIONS*\n",
+    "__*NUMBER OF OBSERVATIONS and information*__\n",
     "3. SANDAG 2018 population estimates by Zip\n",
-    "*NUMBER OF OBSERVATIONS*"
+    "__*NUMBER OF OBSERVATIONS and information*__"
    ]
   },
   {
@@ -550,19 +551,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Fill in your discussion information here*\n",
+    "__*Fill in your discussion information here*__:\n",
     "\n",
-    "*SUMMARIZE DATA AND QUESTION*\n",
+    "__*SUMMARIZE DATA AND QUESTION*__:\n",
     "\n",
-    "*BRIEFLY DESCRIBE ANALYSIS*\n",
+    "List information about food distribution by zip code, ethnicities by zip, and median income by zip. Explain question and understanding.\n",
     "\n",
-    "*INSERT RESULTS HERE*\n",
+    "__*BRIEFLY DESCRIBE ANALYSIS*__:\n",
     "\n",
-    "*INSERT LIMITATIONS HERE*\n",
+    "Generated heatmaps to display food distribution by zip, ethnicities by zip, and median income by zip. Heatmaps also displayed amount of food distributed by zip code through Jan 2019 to April 2020.\n",
     "\n",
-    "A limitation would be the subsets we used. The only available subsets we had were examined because it had the most consistent information ranging from 2019 to 2020. We could only find datasets that were estimates which did not contain the most accurate figures and numbers, such as the SANDAG population estimate from 2018. \n",
+    "__*INSERT RESULTS HERE*__:\n",
     "\n",
-    "*IMPACT ON SOCIETY*\n",
+    "__*INSERT LIMITATIONS HERE*__:\n",
+    "\n",
+    "\n",
+    "A limitation in our report would be the subsets that we used. The subsets we had were the only available subsets that were most accessible to us, which includes information that ranged from January 2019 to April 2020. In order to closely examine the effects of the COVID-19 pandemic, we wanted to find correlations between food bank distributions and zip codes by population estimate, where the most accurate figures and numbers available were that of 2018. \n",
+    "\n",
+    "__*IMPACT ON SOCIETY*__:\n",
+    "\n",
     "\n",
     "\n"
    ]
