--- a/FinalProject_group05(draft).ipynb
+++ b/FinalProject_group05(draft).ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "source": [
     "- With the effects of COVID-19, the reliance on Food bank distribution centers have never been greater. Analysis of food bank distribution data by population estimate shows __growth and correlation__ between the rise of the pandemic and the lbs of food people acquired by zip code. \n",
-    "- Through bootstrapping and generating heatmaps, we find that the ratio of food acquired from food banks has increased from April 2019 to April 2020."
+    "- Through bootstrapping and generating heatmaps, we find that the ratio of food acquired from food banks has increased from a mean of 1.34 lbs in April 2019 to 2.81 lbs in April 2020."
    ]
   },
   {
