--- a/FinalProject_group05.ipynb
+++ b/FinalProject_group05.ipynb
@@ -72,7 +72,7 @@
     "11. [Federal Reserve Bank of St. Louis](https://fred.stlouisfed.org/series/CASAND5URN)\n",
     "12. [city-data.com](http://www.city-data.com/)\n",
     "13. [zipdatamaps.com](https://www.zipdatamaps.com/)\n",
-    "14. [2010 Censu Interactive Population Search](https://archive.vn/2Z18j)\n",
+    "14. [2010 Census Interactive Population Search](https://archive.vn/2Z18j)\n",
     "\n",
     "### Hypothesis:\n",
     "We predict that the outbreak of COVID-19 has negatively impacted individuals' access to food, disproportionately affecting the financially insecure and communities of color. We aim to determine this through an analysis of food distribution by zip code, adjusted by the population estimates and demographic estimates available to us.\n",
@@ -630,7 +630,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* The Africam American population appears to be concentrated in Pacific Beach, La Mesa, and El Cajon."
+    "* The African American population appears to be concentrated in Pacific Beach, La Mesa, and El Cajon."
    ]
   },
   {
@@ -1026,11 +1026,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above map is a \"heat map\" of foot distribution by zip code for the month of January 2019. The map displays the ratio of food distributed by lbs over the total population in that area for each zip code for which consistent data exists.\n",
+    "The above map is a \"heat map\" of food distribution by zip code for the month of January 2019. The map displays the ratio of food distributed by lbs over the total population in that area for each zip code for which consistent data exists.\n",
     "\n",
     "As you can see, there are a few zip codes that stand out:\n",
     "\n",
@@ -2187,7 +2186,7 @@
     "* Distribution way up in Lemon Grove compared to last year - almost double.\n",
     "* Distribution up in Jacumba compared to last year 7.3 compared to 5.6 last year\n",
     "* Distribution up in Potrero compared to last year, 14.5 compared to 8 last year.\n",
-    "* Distribution in Sorrento Valley sky rockets.\n",
+    "* Distribution in Sorrento Valley skyrockets.\n",
     "* Distribution higher in San Marcos and 92102.\n",
     "\n",
     "It's worth noting that according to [FRED](https://fred.stlouisfed.org/series/CASAND5URN), the Federal Reserve Bank of St. Louis, during the month of March, unemployment in San Diego county increases from 3.2% in February, to 4.2% in March."
@@ -2412,7 +2411,7 @@
     "* A significant amount of food is distributed in Vista.\n",
     "* Distribution in Sorrento Valey continues to increase massively, 50 lbs of food distributed per person.\n",
     "\n",
-    "According to [FRED](https://fred.stlouisfed.org/series/CASAND5URN), the Federal Reserve Bank of St. Louis, during the month of April, unemployment in San Diego county increases from 4.2% in March, to 15% in April. This increase in unemployment appears to be heavily correlated with increased food distribution in Lemon Grove, Vista, Julian, and"
+    "According to [FRED](https://fred.stlouisfed.org/series/CASAND5URN), the Federal Reserve Bank of St. Louis, during the month of April, unemployment in San Diego county increases from 4.2% in March, to 15% in April. This increase in unemployment appears to be heavily correlated with increased food distribution in Lemon Grove, Vista, Julian, and Sorrento Valley."
    ]
   },
   {
@@ -2650,7 +2649,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* The orange vertical line represents the mean of ratios in the january 2019 data set. The position of the line representing the mean of ratios falls approximately in the middle of the above distribution. In this graph, as well as in the ones below, the bootstrapping shows that the mean ratios for each month fall within values we would expect them to, also proven by the 95% confidence intervals we later calculate for these mean ratios."
+    "* The orange vertical line represents the mean of ratios in the January 2019 data set. The position of the line representing the mean of ratios falls approximately in the middle of the above distribution. In this graph, as well as in the ones below, the bootstrapping shows that the mean ratios for each month fall within values we would expect them to, also proven by the 95% confidence intervals we later calculate for these mean ratios."
    ]
   },
   {
@@ -3083,7 +3082,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Now we procceed to group together the common months, shuffle the ratios, and then re-calculate the difference of means of the months."
+    "* Now we proceed to group together the common months, shuffle the ratios, and then re-calculate the difference of means of the months."
    ]
   },
   {
@@ -3107,7 +3106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* The function concatenates two data sets of the same length, concatenates them, randomizes the ratio column and calculates the difference of means between 2020 and 2019 a thousand times to generate a distribution of the sample difference of means."
+    "* The function gets two data sets of the same month, concatenates them, randomizes the ratio column, and calculates the difference of means between 2020 and 2019 a thousand times to generate a distribution of the sample difference of means."
    ]
   },
   {
@@ -3153,7 +3152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* The orange vertical line represents the orignal difference of means between january 2019 and january 2020, and the distribution represents the 1000 randomized differences of means."
+    "* The orange vertical line represents the original difference of means between January 2019 and January 2020, and the distribution represents the 1000 randomized differences of means."
    ]
   },
   {
@@ -3491,7 +3490,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data sets we used, namely the San Diego Food Bank distribution data, and SANGIS and SANDAG data, consisted of aggregate data and contained no personal identifiers, so privacy was not a concern. The data we were able to obtain contained estimates of the total population and the ethnic makeup of San Diego County zip codes, alongside information regarding the amount of food distributed by a subset of the San Diego Foodbank's agencies. The lack of consistent food distribution information for all of San Diego county's zip codes adversely affected our ability to generalize or conclusions, and say with confidence that our work is empirically valid. Furthermore, our failure to track other correlates, such as gender or median income due to a lack of time and access to sufficiently granular data. By not tracking these correlates, might very well have resulted in skewed results and biased interpretations.\n",
+    "The data sets we used, namely the San Diego Food Bank distribution data, and SANGIS and SANDAG data, consisted of aggregate data and contained no personal identifiers, so privacy was not a concern. The data we were able to obtain contained estimates of the total population and the ethnic makeup of San Diego County zip codes, alongside information regarding the amount of food distributed by a subset of the San Diego Foodbank's agencies. The lack of consistent food distribution information for all of San Diego county's zip codes adversely affected our ability to generalize or draw conclusions, and say with confidence that our work is empirically valid. Furthermore, we failed to track other correlates, such as gender or median income, due to a lack of time and access to sufficiently granular data. By not tracking these correlates, this might very well have resulted in skewed results and biased interpretations.\n",
     "\n",
     "It's also worth mentioning that the San Diego Food Bank is not the only hunger-relief organization operating in San Diego County. Other organizations were not taken into account due to a lack of available data. Even if we had access to other organizations' data, underserved communities and individuals might have their food needs met by organizations and individuals outside the scope of available data, (churches, religious institutions), might elect not to participate in a census, and/or be documented. \n",
     "\n",
@@ -3511,7 +3510,7 @@
    "source": [
     "Our work centered around determining how the outbreak of COVID-19 has affected the amount of food measured in LBs distributed by the San Diego Food Bank, particularly in communities of color and among those of limited financial means. When we formulated our hypothesis, we predicted that the outbreak of COVID-19 has negatively impacted individuals' access to food, disproportionately affecting the financially insecure and communities of color. The COVID-19 outbreak is ongoing, and our ability to collect and analyze sufficient amounts of information to confirm or reject our null hypothesis was limited. Although we were able to show that there has been a significant increase in the amount of food distributed across the zip codes we tracked, and provide contextual evidence that indicated that certain communities were disproportionately affected, we were ultimately unable to empirically determine whether the outbreak of the pandemic has disproportionately affected communities of color and the financially insecure.\n",
     "\n",
-    "As mentioned in the Ethics & Privacy section, our work is extremely limited. Any future research into the subject would benefit from access to more granular data about unemployment, (preferably by zip code), and more consistent information regarding food distribution throughout all the zip codes in San Diego county by all of the hunger-relief organizations operating in the area. Furthermore, future work would benefit from taking into consideration possible correlates through the inclusion of additional demographic information regarding the gender and median income. Doing so might enable researchers to obtain a deeper understanding of the phenomenon, and draw more concrete conclusions."
+    "As mentioned in the Ethics & Privacy section, our work is extremely limited. Any future research into the subject would benefit from access to more granular data about unemployment (preferably by zip code), and more consistent information regarding food distribution throughout all the zip codes in San Diego county by all of the hunger-relief organizations operating in the area. Furthermore, future work would benefit from taking into consideration possible correlates through the inclusion of additional demographic information regarding the gender and median income. Doing so might enable researchers to obtain a deeper understanding of the phenomenon, and draw more concrete conclusions."
    ]
   },
   {
@@ -3525,10 +3524,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We would like to extend our gratitude to Shelly Parks, San Diego Food Bank's Director of Programs. Without Shelly's help, we would have been unable to obtain information regarding the distribution of food. Her generosity, and her willingness to help, was what enabled us to conduct our research, and deserves our deepest appreciation.\n",
+    "We would like to extend our gratitude to Shelly Parks, San Diego Food Bank's Director of Programs. Without Shelly's help, we would have been unable to obtain information regarding the distribution of food. Her generosity and willingness to help were what enabled us to conduct our research, and she deserves our deepest appreciation.\n",
     "\n",
     "We would also like to thank Andy Gordon, a GIS Analyst at SANDAG, for his willingness to answer our questions."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -3547,7 +3553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
